# ccgram

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/: guides.md
src/ccgram/: agent_input_delivery.py  bot.py  cc_commands.py  config.py  entity_formatting.py  mailbox.py  msg_cmd.py  msg_discovery.py  screen_buffer.py  session.py  session_map.py  spawn_request.py  tmux_manager.py  utils.py  window_query.py  window_state_store.py  window_view.py
src/ccgram/handlers/: callback_data.py  callback_registry.py  cleanup.py  command_orchestration.py  directory_callbacks.py  hook_events.py  interactive_ui.py  kill_command.py  message_queue.py  message_routing.py  message_sender.py  message_task.py  msg_broker.py  periodic_tasks.py  polling_coordinator.py  recovery_callbacks.py  resume_command.py  send_security.py  session_teardown.py  sessions_dashboard.py  shell_commands.py  status_bubble.py  sync_command.py  text_handler.py  tool_batch.py  topic_lifecycle.py  transcript_discovery.py  user_state.py  voice_callbacks.py  window_callbacks.py  window_tick.py
src/ccgram/providers/: __init__.py  codex.py  pi_discovery.py
tests/ccgram/: test_agent_input_delivery.py  test_cc_commands.py  test_config.py  test_entity_formatting.py  test_event_reader.py  test_group_filter.py  test_new_command.py  test_screenshot.py  test_session.py  test_session_monitor.py  test_session_monitor_events.py  test_vim_mode.py  test_window_view.py
tests/ccgram/handlers/: test_command_orchestration.py  test_emdash_integration.py  test_hook_events.py  test_interactive_ui.py  test_kill_command.py  test_message_queue.py  test_message_routing.py  test_message_sender.py  test_message_task.py  test_new_window_sync.py  test_pending_prompt.py  test_polling_coordinator.py  test_recovery_ui.py  test_resume_command.py  test_selection.py  test_session_teardown.py  test_shell_capture.py  test_shell_commands.py  test_status_polling.py  test_text_handler.py  test_tool_batch.py  test_tool_batching.py  test_topic_close.py  test_topic_lifecycle.py  test_window_callbacks.py  test_window_tick.py
tests/ccgram/llm/: test_llm_summarizer.py
tests/ccgram/providers/: test_jsonl_providers.py  test_registry.py
